-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
Bug was found in sanity_53:
PTLDEBUG=-1 SUBSYSTEM=-1 DEBUG_SIZE=1000 SANITY_EXCEPT="43" MDSCOUNT=4 OSTCOUNT=4 SLOW=yes ONLY=53 sh sanity.sh -v ... == sanity test 53: verify that MDS and OSTs agree on pre-creation ==================================== 05:27:47 (1536139667) lustre-OST0000.last_id=0x300000400:65; MDS.last_id=65 lustre-OST0000.last_id=0x300000401:65; MDS.last_id=65 lustre-OST0000.last_id=0x300000402:65; MDS.last_id=65 lustre-OST0000.last_id=0x100000000:65; MDS.last_id=65 lustre-OST0001.last_id=0x340000400:65; MDS.last_id=65 lustre-OST0001.last_id=0x340000401:65; MDS.last_id=65 lustre-OST0001.last_id=0x100010000:65; MDS.last_id=65 lustre-OST0002.last_id=0x380000400:65; MDS.last_id=65 lustre-OST0002.last_id=0x380000401:65; MDS.last_id=65 lustre-OST0002.last_id=0x380000402:65; MDS.last_id=65 lustre-OST0002.last_id=0x100020000:65; MDS.last_id=65 lustre-OST0003.last_id=0x3c0000400:65; MDS.last_id=4294967330 lustre-OST0003.last_id=0x3c0000401:65; MDS.last_id=4294967330 lustre-OST0003.last_id=0x3c0000402:65; MDS.last_id=4294967330 lustre-OST0003.last_id=0x100030001:4294967330; MDS.last_id=4294967330
to reproduce
- umount /mnt/lustre-ost3
- mount -t ldiskfs -o loop /tmp/lustre-ost3 /mnt/ost
- cd /mnt/ost/O/0
- hexedit LAST_ID (change it to ff ff ff ff 00 00 00 00)
- umount /mnt/ost
- mount -t lustre -o loop /tmp/lustre-ost3/ /mnt/lustre-ost3
[root@localhost ost3]# cat /proc/fs/lustre/obdfilter/lustre-OST0002/last_id 0x100020001:4295098401... [root@localhost ost3]# cat /proc/fs/lustre/osp/lustre-OST0002-osc-MDT0000/prealloc_last_seq 0x100020000 [root@localhost ost3]# cat /proc/fs/lustre/osp/lustre-OST0002-osc-MDT0000/prealloc_last_id 4295098401